--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-><header>Músicas para relaxar</header>
-><h1>RELAXAR PARA DESCANÇAR</h1>
-><p>Escute</p>
+<header>Músicas para relaxar</header>
+<h1>RELAXAR PARA DESCANÇAR</h1>
+<p>Escute</p>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/jSmOWmt2T2k?si=jT2BW_Aek2eZ9fq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/6uafwUwfgxs?si=4xdYFNVm7tpBH2mM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
